Remove line height property fixing display issues on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -92,11 +92,9 @@ body {
 
 .homePageSelectFormTitle {
   letter-spacing: 0.75px;
-  line-height: 0.5;
   margin: 40px 0 20px;
   font-size: 26px;
   display: inline-block;
-  background-color: $background-green;
 }
 
 .map {
